tests/neg/t1625.scala
trait T3 {
  def foo(x: String*, y: String*, c: String*): Int // error: an identifier expected, but ',' found // error: an identifier expected, but ',' found
}
